FILE(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.cpp)

FOREACH(SOURCE ${TEST_SOURCES})
    GET_FILENAME_COMPONENT(TEST_NAME ${SOURCE} NAME_WLE)

    ADD_EXECUTABLE(${TEST_NAME} ${SOURCE})

    ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

    target_link_libraries(${TEST_NAME} LINK_PUBLIC
            ${PROJECT_NAME}
            gtest_main
    )
ENDFOREACH()
